test/error/forgprep1.luau
local it = 69

for i, v in it do
	print(i, v)
end
